--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3Qarat</title>
   </head>
   <body>
     <div id="app"></div>
+    <!-- <script src="https://kit.fontawesome.com/4554f070a2.js" crossorigin="anonymous"></script> -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
